➕ profile: 내정보 페이지 추가 + 사용자 정보 저장 테이블 생성
- 자기소개, 닉네임, 생년월일, 이메일, 전화번호를 입력받아 테이블에 저장

--- a/pages/header.html
+++ b/pages/header.html
@@ -101,7 +101,7 @@
           </div>
           <div class="flex items-center pt-4 pb-4 text-lg border-b border-gray-700">
             <button id="logout" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" aria-label="로그아웃">로그아웃</button>
-            <button id="user" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" aria-label="내정보">내정보</button>
+            <button type="button" id="user" class="flex-1 hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" aria-label="내정보">내정보</button>
             <a id="login" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="/pages/login.html" aria-label="로그인">로그인</a>
             <a id="signup" class="flex-1 text-center hover:text-gray-500 hover:cursor-pointer dark:hover:text-gray-500" href="/pages/signup.html" aria-label="회원가입">회원가입</a>
           </div>
