--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -7,6 +7,7 @@
     <title>개인 개발 블로그 - 회고록</title>
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/scroll.css" />
+    <script type="module" src="../components/devLog/fetchProfile.js"></script>
 </head>
 
 <body class="scroll">
@@ -55,11 +56,11 @@
 
                 <aside class="hidden sm:block border max-w-[400px] ml-auto shadow-xl rounded-2xl bg-white dark:bg-gray-800">
                     <div class="flex flex-col justify-center items-center gap-5 p-15">
-                        <div class="flex w-60 h-60 border rounded-full"></div>
+                        <img id="profileImg" class="flex w-60 h-60 border rounded-full" src="" alt="" />
                         <div id="sign_in">
                             <div class="text-center">
-                                <h2 class="text-bold text-3xl mb-3">NickName</h2>
-                                <p class="text-gray-500 text-xl">나는 개발자입니다.</p>
+                                <h2 id="profileNickName" class="text-bold text-3xl mb-3"></h2>
+                                <p id="profileIntroduce" class="text-gray-500 text-xl"></p>
                             </div>
 
                         </div>
