✏️ devLog: 사용자 프로필 개선 - 로그인/로그아웃의 상태에 따라 사용자에게 보여지는 페이지 분류

--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -56,11 +56,11 @@
 
                 <aside class="hidden sm:block border max-w-[400px] ml-auto shadow-xl rounded-2xl bg-white dark:bg-gray-800">
                     <div class="flex flex-col justify-center items-center gap-5 p-15">
-                        <img id="profileImg" class="flex w-60 h-60 border rounded-full" src="" alt="" />
+                        <img id="profileImg" class="hidden flex w-60 h-60 border rounded-full" src="" alt="" />
                         <div id="sign_in">
                             <div class="text-center">
-                                <h2 id="profileNickName" class="text-bold text-3xl mb-3"></h2>
-                                <p id="profileIntroduce" class="text-gray-500 text-xl"></p>
+                                <h2 id="profileNickName" class="hidden text-bold text-3xl mb-3">ㅆㅆ</h2>
+                                <p id="profileIntroduce" class="hidden text-gray-500 text-xl">ㅆㅆ</p>
                             </div>
 
                         </div>
