➕ API 불러오기 및 CORS 처리

--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/scroll.css" />
     <script type="module" src="../components/devLog/fetchProfile.js"></script>
+    <script type="module" src="../components/devLog/LoadHolidays.js"></script>
 </head>
 
 <body class="scroll">
