➕ checkPoistOwner 추가 - 포스트 삭제, 수정에서 유저의 id를 조회하고 검사하던 로직을 재사용 가능하도록 로직을 구현

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
     <title>개인 블로그</title>
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/scroll.css" />
+    <script type="module" src="../components/about/aside_nav.js"></script>
 </head>
 
 <body class="overflow-hidden">
