✏️ profile: 로그인이 안되어있을경우 404 페이지로 이동

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,7 +10,7 @@
     <script type="module" src="/components/header/header.js"></script>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/components/profile/profileImgRendder.js"></script>
-    <script type="module" src="/components/profile/profileInputControler.js" defer></script>
+    <script type="module" src="/components/profile/profileInputControler.js"></script>
     <script type="module" src="/components/profile/profileInputData.js"></script>
     <script type="module" src="/components/profile/profileInnerBirth.js"></script>
   </head>
