--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <script type="module" src="../components/about/aside_nav.js"></script>
 </head>
 
-<body class="overflow-hidden">
+<body class="overflow-hidden font-[A2Z-SemiBold]">
     <div id="header-placeholder"></div>
 
     <!--네비게이션-->
