--- a/pages/header.html
+++ b/pages/header.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style.css" />
-    <title>HeaderHtml</title>
+    <title>DoHyek.dev - header</title>
   </head>
   <body>
     <!--헤더-->
     <header
       id="header"
-      class="h-20 border-b border-gray-300 bg-white dark:border-gray-700 dark:bg-gray-800 dark:text-white fixed top-0 left-0 right-0 z-50"
+      class="h-20 border-b border-gray-300 bg-white dark:border-gray-700 dark:bg-gray-800 dark:text-white fixed top-0 left-0 right-0 z-50 font-[A2Z-Bold]"
     >
       <div class="flex items-center">
         <button
@@ -36,7 +35,7 @@
             />
           </a>
           <h1 class="text-2xl">
-            <span class="hidden sm:block">개인 개발 블로그</span>
+            <span class="hidden sm:block">DoHyek.dev</span>
             <span class="block sm:hidden text-xl">개발 블로그</span>
           </h1>
         </div>
@@ -117,7 +116,7 @@
     </header>
 
     
-    <!-- <script type="module" src="/src/main.js"></script> -->
+    <script type="module" src="/src/main.js"></script>
     <script type="module" src="/components/menuBtn.js"></script>
     <script type="module" src="/components/darkmode/darkmode_index.js"></script>
     <script type="module" src="/components/login/logOut.js"></script>
