--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,10 +14,7 @@
     <script type="module" src="/components/profile/profileInputData.js"></script>
     <script type="module" src="/components/profile/profileInnerBirth.js"></script>
   </head>
-  <body class="h-screen bg-gray-200 dark:bg-gray-900 flex flex-col">
-    <!-- 헤더 -->
-    <header id="header-placeholder" class="w-full"></header>
-
+  <body class="h-screen bg-gray-200 dark:bg-gray-900 flex flex-col font-[A2Z-SemiBold]">
     <!-- 메인 -->
     <main class="flex-1 flex justify-center items-center mt-20 p-4">
       <!-- 티켓 형태 카드 -->
