--- a/pages/404.html
+++ b/pages/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 - 페이지를 찾을 수 없습니다</title>
+    <script type="module" src="../src/main.js"></script>
     <style>
       * {
         box-sizing: border-box;
@@ -11,7 +12,7 @@
 
       body {
         margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont,
+        font-family: "system-ui", -apple-system, BlinkMacSystemFont,
           "Segoe UI", Roboto, "Noto Sans KR", sans-serif;
         background-color: #0f172a;
         color: #e5e7eb;
@@ -55,7 +56,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container font-[A2Z-SemiBold]">
       <h1>404</h1>
       <p>
         요청하신 페이지를 찾을 수 없습니다.<br />
