--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -8,7 +8,7 @@
     <title>비밀번호 찾기 - 개인 개발 블로그</title>
 </head>
 
-<body class="overflow-hidden">
+<body class="overflow-hidden font-[A2Z-SemiBold]">
     <div id="header-placeholder"></div>
     <!--메인-->
     <main id="maincontainer" class="pt-20 min-h-screen bg-gray-100 dark:bg-gray-800 dark:text-white">
