--- a/pages/login.html
+++ b/pages/login.html
@@ -8,9 +8,7 @@
     <title>로그인 - 개인 개발 블로그</title>
 </head>
 
-<body class="overflow-hidden">
-    <div id="header-placeholder"></div>
-
+<body class="overflow-hidden font-[A2Z-SemiBold]">
     <!--메인-->
     <main id="maincontainer" class="pt-20 min-h-screen bg-gray-100 dark:bg-gray-800 dark:text-white">
         <div class="flex justify-center items-center min-h-[calc(100vh-80px)]">
