--- a/pages/postCreate.html
+++ b/pages/postCreate.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../src/style.css" />
     <link rel="stylesheet" href="../src/scroll.css" />
   </head>
-  <body>
-    <header id="header-placeholder"></header>
+  <body class="font-[A2Z-SemiBold]">
     <main id="post-section" class="w-full h-[calc(100vh-5rem)] grid grid-cols-1 md:grid-cols-2 mt-20 bg-gray-50 dark:bg-gray-800 dark:text-white">
       <div id="imgWrapper" class="hidden z-1 fixed inset-0 flex items-center justify-center bg-black/40">
         <div id="imgAdd" class="w-[250px] rounded-xl border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 shadow-lg p-3 z-50">
