➕ 이용약관 및 정보처리방침 추가 - header 텍스트 변경

--- a/pages/header.html
+++ b/pages/header.html
@@ -35,8 +35,7 @@
             />
           </a>
           <h1 class="text-2xl">
-            <span class="hidden sm:block">DoHyek.dev</span>
-            <span class="block sm:hidden text-xl">개발 블로그</span>
+            <span>DoHyek.dev</span>
           </h1>
         </div>
         <div class="relative flex justify-end items-center flex-grow mr-5 gap-2">
