--- a/pages/about.html
+++ b/pages/about.html
@@ -97,8 +97,7 @@
                 <footer class="footer flex h-full dark:bg-gray-900 dark:text-gray-200">
                     <div class="flex items-center gap-3 p-10">
                         <img width="28" height="28" src="https://img.icons8.com/tiny-color/28/code.png" alt="code" />
-                        <h1 class="text-xl hidden sm:block">개인 개발 블로그</h1>
-                        <h1 class="text-xl block sm:hidden">개발 블로그</h1>
+                        <h1 class="text-xl">DoHyek.dev</h1>
                     </div>
                     <div class="p-10 flex flex-grow items-center justify-end">
                         <p>© 2025 개인 개발 블로그. All rights reserved.</p>
