--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -73,7 +73,7 @@
 
                         <!--로그인 안되어있을때 오픈-->
                         <div id="DevLogActionSignedOut" class="hidden flex flex-col gap-4 text-center">
-                            <p class="text-sm text-gray-400 dark:text-gray-500">로그인후에 더 많은 기능을 이용해보세요!</p>
+                            <p class="text-sm text-gray-400 dark:text-gray-500"><span class="text-purple-400 dark:text-purple-600">로그인</span> 후 더 많은 기능을 이용해 보세요!</p>
                             <div class="flex flex-grow justify-center items-center gap-4 mt-5">
                                 <a href="/pages/login.html"
                                     class="cursor-pointer border text-center content-center w-30 h-10 rounded-full border-gray-400 shadow-sm hover:bg-gray-300 bg-gray-100 text-gray-800 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">로그인</a>
@@ -145,8 +145,7 @@
         <footer class="footer flex border-t dark:bg-gray-900 dark:text-gray-200 dark:border-gray-700">
             <div class="flex items-center gap-3 p-10">
                 <img width="28" height="28" src="https://img.icons8.com/tiny-color/28/code.png" alt="code" />
-                <h1 class="text-xl hidden sm:block">개인 개발 블로그</h1>
-                <h1 class="text-xl block sm:hidden">개발 블로그</h1>
+                <h1 class="text-xl">DoHyek.dev</h1>
             </div>
             <div class="p-10 flex-grow text-right">
                 <p>© 2026 개인 개발 블로그. All rights reserved.</p>
