--- a/pages/login.html
+++ b/pages/login.html
@@ -1,105 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/style.css" />
+    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="/components/header/innerHeader.js"></script>
+    <script type="module" src="/components/login/loginHandler.js"></script>
+    <script type="module" src="/components/header/header.js"></script>
     <title>로그인 - 개인 개발 블로그</title>
 </head>
 
 <body class="overflow-hidden font-[A2Z-SemiBold]">
-    <!--메인-->
-    <main id="maincontainer" class="pt-20 min-h-screen bg-gray-100 dark:bg-gray-800 dark:text-white">
-        <div class="flex justify-center items-center min-h-[calc(100vh-80px)]">
-            <div class="w-full max-w-md">
-                <div class="bg-white dark:bg-gray-700 shadow-lg rounded-2xl p-10">
-                    <!-- 타이틀 -->
-                    <div class="text-center mb-8">
-                        <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-2">로그인</h2>
-                        <p class="text-gray-600 dark:text-gray-400">계정에 로그인하여 시작하세요</p>
-                    </div>
+    <main id="maincontainer" class="pt-20 min-h-screen bg-gray-100 dark:bg-gray-800 dark:text-white flex items-center justify-center">
+        <div class="w-full max-w-md bg-white dark:bg-gray-700 shadow-lg rounded-2xl p-10 space-y-6">
+            <div class="text-center space-y-2">
+                <h2 class="text-3xl font-bold text-gray-900 dark:text-white">로그인</h2>
+                <p class="text-gray-600 dark:text-gray-400">계정에 로그인하여 시작하세요</p>
+            </div>
 
-                    <!-- 로그인 폼 -->
-                    <form id="loginForm" class="space-y-4">
-                        <!-- 이메일 입력 -->
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
-                                이메일
-                            </label>
-                            <input type="email" id="email" placeholder="your@email.com"
-                                class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-600 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                required />
-                        </div>
+            <div class="flex flex-col gap-3">
+                <button id="googleLogin" class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
+                    <img width="20" height="20" src="https://img.icons8.com/color/96/google-logo.png" alt="google-logo" />
+                    <span class="text-gray-700 dark:text-gray-300">Google로 로그인</span>
+                </button>
+                <button id="githubLogin" class="w-full py-2 px-4 border border-gray-300 dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
+                    <img width="20" height="20" src="https://img.icons8.com/color/96/github--v1.png" alt="github-logo" />
+                    <span class="text-gray-700 dark:text-gray-300">GitHub로 로그인</span>
+                </button>
+            </div>
 
-                        <!-- 비밀번호 입력 -->
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
-                                비밀번호
-                            </label>
-                            <input type="password" id="password" placeholder="••••••••"
-                                class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-600 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                required />
-                        </div>
-
-                        <!-- 기억하기 및 비밀번호 찾기 -->
-                        <div class="flex justify-between items-center">
-                            <label class="flex items-center">
-                                <input type="checkbox" id="remember"
-                                    class="w-4 h-4 text-blue-500 rounded focus:ring-2 focus:ring-blue-500" />
-                                <span class="ml-2 text-sm text-gray-600 dark:text-gray-400">로그인 유지</span>
-                            </label>
-                            <a href="./forgot-password.html" class="text-sm text-blue-500 hover:text-blue-700 dark:hover:text-blue-300">
-                                비밀번호 찾기
-                            </a>
-                        </div>
-
-                        <!-- 로그인 버튼 -->
-                        <button type="submit"
-                            class="w-full py-2 px-4 bg-blue-500 hover:bg-blue-600 dark:bg-blue-600 dark:hover:bg-blue-700 text-white font-medium rounded-lg transition duration-300">
-                            로그인
-                        </button>
-                    </form>
-
-                    <!-- 구분선 -->
-                    <div class="flex items-center my-6">
-                        <div class="flex-1 border-t border-gray-300 dark:border-gray-600"></div>
-                        <span class="px-3 text-sm text-gray-600 dark:text-gray-400">또는</span>
-                        <div class="flex-1 border-t border-gray-300 dark:border-gray-600"></div>
-                    </div>
-
-                    <!-- 소셜 로그인 -->
-                    <div class="space-y-3">
-                        <button id="googleLogin"
-                            class="w-full py-2 px-4 border border-gray-300 hover:cursor-pointer dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
-                            <img width="20" height="20" src="https://img.icons8.com/color/96/google-logo.png"
-                                alt="google-logo" />
-                            <span class="text-gray-700 dark:text-gray-300">Google로 로그인</span>
-                        </button>
-                        <button id="githubLogin"
-                            class="w-full py-2 px-4 border border-gray-300 hover:cursor-pointer dark:border-gray-600 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 transition duration-300 flex items-center justify-center gap-2">
-                            <img width="20" height="20" src="https://img.icons8.com/color/96/github--v1.png"
-                                alt="github--v1" />
-                            <span class="text-gray-700 dark:text-gray-300">GitHub로 로그인</span>
-                        </button>
-                    </div>
-
-                    <!-- 회원가입 링크 -->
-                    <p class="text-center mt-6 text-gray-600 dark:text-gray-400">
-                        계정이 없으신가요?
-                        <a href="./signup.html" class="text-blue-500 hover:text-blue-700 dark:hover:text-blue-300 font-medium">
-                            회원가입
-                        </a>
-                    </p>
-                </div>
+            <div class="flex gap-1.5 justify-center text-gray-300 dark:text-gray-500 flex-wrap text-sm">
+                로그인 시<a href="./terms.html" rel="noopener noreferrer" target="_blank" rel="noree" id="terms" class="cursor-pointer text-purple-500 dark:text-purple-400">이용약관</a>및<a href="./policy.html" rel="noopener noreferrer" target="_blank" id="policy" class="cursor-pointer text-purple-500 dark:text-purple-400">개인정보처리방침</a>에 동의하게 됩니다.
             </div>
         </div>
     </main>
-
-
-    <script type="module" src="/components/header/innerHeader.js"></script>
-    <script type="module" src="/components/login/loginHandler.js"></script>
-    <script type="module" src="/components/header/header.js"></script>
 </body>
-
 </html>
