--- a/pages/about.html
+++ b/pages/about.html
@@ -33,8 +33,9 @@
                     loop></video>
                 <div class="absolute w-full h-full bg-black/50"></div>
                 <div class="absolute w-full h-full flex flex-col justify-center text-white z-10">
-                    <h2 class="p-10 text-5xl">Introduction</h2>
-                    <p class="pl-10 text-2xl">Front-End Developer</p>
+                    <h2 class="p-10 text-5xl">꾸준함은 무기다.</h2>
+                    <p class="pl-10 mb-2 text-2xl">Frontend Engineer</p>
+                    <p class="pl-10 text-xl">clzlsdlwhgdk12@gmail.com</p>
                 </div>
             </header>
         </section>
