--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="./src/scroll.css" />
     <script type="module" src="./components/header/innerHeader.js"></script>
     <script type="module" src="./components/header/header.js"></script>
+    <script type="module" src="./components/animations/animation.js"></script>
     <script type="module" src="/src/main.js"></script>
   </head>
   <body class="scroll font-[A2Z-SemiBold]">
 <!--메인-->
   <main id="main" class="maincontainer">
     <!--비디오 섹션-->
-    <section class="relative w-full h-100 mt-16">
+    <section id="gravityContainer" class="relative w-full h-100 mt-16 overflow-hidden">
       <div class="absolute w-full h-full bg-linear-to-r from-black via-black/90 to-black/80 dark:from-blue-950 dark:via-blue-950/90 dark:to-blue-950/80"></div>
       <div class="absolute w-full h-full flex flex-col justify-center text-white z-10">
         <h2 class="p-10 text-5xl">코드로 배우고 공유하다.</h2>
         <p class="pl-10 text-2xl">Front-End 개발자의 성장 기록</p>
         <p class="pl-10 text-2xl">최신 기술과 프로젝트 경험을 기록합니다.</p>
       </div>
-      <button class="hidden md:block z-11 absolute w-12 h-12 top-20 right-[5%] rounded-full text-slate-700 bg-[radial-gradient(circle,white_40%,#ccc_60%,#000_100%)] shadow-xl backdrop-blur-sm cursor-pointer hover:animate-[squish_0.9s_ease-in-out] text-xl">?</button>
+      <button id="gravityBtn" class="hidden md:flex z-11 absolute w-12 h-12 top-20 right-[5%] rounded-full text-slate-700 bg-[radial-gradient(circle,white_40%,#ccc_60%,#000_100%)] shadow-xl backdrop-blur-sm cursor-grab hover:animate-[squish_0.9s_ease-in-out] text-xl active:cursor-grabbing touch-none select-none justify-center items-center">?</button>
     </section>
 
     <!--카테고리 버튼-->
