--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoHyek.dev - 회고록</title>
-    <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/scroll.css" />
+    <script type="module" src="../src/main.js"></script>
     <script type="module" src="../components/devLog/fetchProfile.js"></script>
 </head>
 
@@ -14,9 +14,8 @@
     <!--메인-->
     <main id="main" class="maincontainer border pt-16">
         <!--비디오 섹션-->
-        <div class="relative w-full h-100">
-            <video class="absolute w-full h-full object-cover" src="/video/mainvideo3.mp4" autoplay muted loop></video>
-            <div class="absolute w-full h-full bg-black/50"></div>
+        <div class="relative w-100vw h-100">
+            <div class="absolute w-full h-full bg-linear-to-r from-black via-black/90 to-black/80 dark:from-blue-950 dark:via-blue-950/90 dark:to-blue-950/80"></div>
             <div class="absolute w-full h-full flex flex-col justify-center text-white z-10">
                 <h1 class="p-10 text-5xl">DevLog 개인 회고록</h1>
                 <p class="pl-10 text-2xl">배움간에 생각의 흐름들을 정리</p>
