✅ docs: 배포상황에 맞게 경로 수정 및 preview 검사

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoHyek.dev</title>
-    <link rel="stylesheet" href="./src/scroll.css" />
-    <script type="module" src="./components/header/innerHeader.js"></script>
-    <script type="module" src="./components/header/header.js"></script>
-    <script type="module" src="./components/animations/animation.js"></script>
+    <link rel="stylesheet" href="/src/scroll.css" />
+    <script type="module" src="/components/header/innerHeader.js"></script>
+    <script type="module" src="/components/header/header.js"></script>
+    <script type="module" src="/components/animations/animation.js"></script>
     <script type="module" src="/src/main.js"></script>
   </head>
   <body class="scroll font-[A2Z-SemiBold]">
@@ -76,8 +76,8 @@
           <article
             class="border border-gray-400 shadow-sm rounded-lg h-110 flex flex-col justify-start dark:border-gray-600 group-hover:border-blue-500">
             <div class="border-b border-gray-300 flex justify-center w-full aspect-[16/9] overflow-hidden rounded-t-lg">
-              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 hidden dark:block" src="./img/GitHub_Lockup_Light.svg" alt="github"/>
-              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 block dark:hidden" src="./img/GitHub_Lockup_Dark.svg" alt="github"/>
+              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 hidden dark:block" src="/img/GitHub_Lockup_Light.svg" alt="github"/>
+              <img class="relative object-contain w-[95%] rounded-t-lg group-hover:scale-105 transition-transform duration-500 block dark:hidden" src="/img/GitHub_Lockup_Dark.svg" alt="github"/>
             </div>
             <div class="m-5 flex flex-col gap-5 min-h-[120px]">
               <div class="m-0 shadow-sm flex rounded-sm justify-center items-center bg-gradient-to-r from-sky-400 to-blue-600 text-white text-xs w-18 h-6 dark:from-sky-600 dark:to-blue-800">Github</div>
