--- a/pages/devLog.html
+++ b/pages/devLog.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoHyek.dev - 회고록</title>
     <link rel="stylesheet" href="/src/scroll.css" />
-    <script type="module" src="../src/main.js"></script>
-    <script type="module" src="../components/devLog/fetchProfile.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/components/devLog/fetchProfile.js"></script>
 </head>
 
 <body class="scroll font-[A2Z-SemiBold]">
@@ -150,11 +150,11 @@
                 <p>© 2026 개인 개발 블로그. All rights reserved.</p>
             </div>
         </footer>
-        <script src="/components/devLog/calendarYearBtn.js"></script>
+        <script type="module" src="/components/devLog/calendarYearBtn.js"></script>
         <script type="module" src="/components/header/innerHeader.js"></script>
         <script type="module" src="/components/header/header.js"></script>
         <script type="module" src="/components/devLog/calender.js"></script>
-        <script src="/components/devLog/login/devLoginCheck.js"></script>
+        <script type="module" src="/components/devLog/login/devLoginCheck.js"></script>
         <script type="module" src="/components/devLog/postUpdate.js"></script>
 </body>
 
