--- a/pages/404.html
+++ b/pages/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 - 페이지를 찾을 수 없습니다</title>
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
     <style>
       * {
         box-sizing: border-box;
